# gateway/TradeDiary.EdgeApi/Endpoints/SettingsEndpoints.cs
@@ -11,6 +11,7 @@ internal static class SettingsEndpoints
                 value.Email,
                 value.DisplayName,
                 value.Timezone,
+                value.JournalDayRollover,
                 value.BaseCurrency,
                 value.Appearance,
                 value.Locale,
@@ -28,6 +29,7 @@ internal static class SettingsEndpoints
                 value.Email,
                 value.DisplayName,
                 value.Timezone,
+                value.JournalDayRollover,
                 value.BaseCurrency,
                 value.Appearance,
                 value.Locale,
